Update 'hvitpu03p-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:7f90645565f457cbb49c5bef3b9c38367b402e89@sha256:cf7741cb11f54432aff4c1b743d94d52636b7c1df540e0481b44a7394e436f0d

--- a/components/hvitpu03p-go/overlays/development/deployment-patch.yaml
+++ b/components/hvitpu03p-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: hvitpu03p-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:7f90645565f457cbb49c5bef3b9c38367b402e89@sha256:cf7741cb11f54432aff4c1b743d94d52636b7c1df540e0481b44a7394e436f0d
+          name: container-image
